<resources>
    <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
    <string name="AdMob_APPLICATION_ID">ca-app-pub-3940256099942544~3347511713</string>

    <string name="app_name">Multi WebView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Multi WebView</string>
    <string name="nav_header_subtitle">inw24.com@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_custom_nav_1">Custom Nav 1</string>
    <string name="menu_custom_nav_2">Custom Nav 2</string>
    <string name="menu_custom_nav_3">Custom Nav 3</string>
    <string name="menu_custom_nav_4">Custom Nav 4</string>
    <string name="menu_custom_nav_5">Custom Nav 5</string>
    <string name="menu_other">Other</string>
    <string name="menu_share">Share</string>
    <string name="menu_exit">Exit</string>

    <!-- If you want, you can customize the error page! -->
    <string name="error_page">error.html</string>

    <string name="txt_error">Error !!!</string>
    <string name="txt_in_progress">In Progress...</string>
    <string name="your_application_has_been_disabled">Your application has been disabled.</string>
    <string name="txt_maintenance_title">Maintenance Mode</string>
    <string name="txt_ok">OK</string>
    <string name="txt_get_update">Download new version</string>
    <string name="txt_check_update_title">Update</string>
    <string name="txt_check_update_msg">New update is available. Please update!</string>
    <string name="txt_later">Later</string>
    <string name="txt_downloading">Downloading...</string>

    <string name="txt_update_url">http://webview.inw24.com/dl/webview.apk</string>
    <string name="txt_share">Hello, I would like to share this app with you:\n
                                  http://webview.inw24.com/dl/webview.apk</string>

    <string name="txt_whoops">Whoops!</string>
    <string name="txt_no_network_connection_found">No network connection found.</string>
    <string name="txt_try_again">Try Again</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_this_function_is_not_support_here">This function is not support on your device.</string>
    <string name="txt_click_back_again_to_exit">Click back again to exit!</string>

</resources>
